--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.83.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "recharts": "^3.5.0"
   },
   "devDependencies": {
