--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.83.0",
     "@types/leaflet": "^1.9.21",
+    "@types/three": "^0.181.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.554.0",
     "next": "^16.0.8",
@@ -18,7 +21,8 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-leaflet": "^5.0.0",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
