--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.83.0",
     "@types/leaflet": "^1.9.21",
     "@types/three": "^0.181.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.554.0",
     "next": "^16.0.8",
