--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.83.0",
     "@types/leaflet": "^1.9.21",
     "@types/three": "^0.181.0",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -23,6 +24,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-leaflet": "^5.0.0",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.5.0",
     "three": "^0.181.2"
   },
